5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1716_2507.log
== TEST (2019-05-13 17:27:43) 
-- CODE:
q= int(input('Quantidade inicial: '))
pc= int(input("Percentual de Cres. Mensal: "))

meses= 0

while (0 < q < 8000):
	qprv= int(input("Quantidade de peixes retirados: "))
	q= q + ( q * ( pc/100))
	q= q - qprv
	meses= meses + 1
	if ( q >= 0):
		print("ZERO")
	elif ( q >= 8000):
		prnt("MAXIMO")
		
print(meses)
-- OUTPUT:
ZERO
ZERO
ZERO
ZERO
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:28:37) 
-- CODE:
q= int(input('Quantidade inicial: '))
pc= int(input("Percentual de Cres. Mensal: "))

meses= 0

while (0 < q < 8000):
	qprv= int(input("Quantidade de peixes retirados: "))
	q= q + ( q * ( pc/100))
	q= q - qprv
	meses= meses + 1
	if ( q >= 0):
		print("ZERO")
	elif ( q >= 8000):
		prnt("MAXIMO")
		
print(meses)
-- EXECUTION TIME:
0.137314
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
ZERO
ZERO
ZERO
ZERO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:40:40) 
-- CODE:
q= int(input('Quantidade inicial: '))
pc= int(input("Percentual de Cres. Mensal: "))

meses= 0

while (0 < q < 8000):
	qprv= int(input("Quantidade de peixes retirados: "))
	q= q + ( q * ( pc/100))
	q= q - qprv
	meses= meses + 1
	if ( q >= 0):
		print("ZERO")
	elif ( q >= 8000):
		print("MAXIMO")
		
print(meses)
-- OUTPUT:
ZERO
ZERO
ZERO
ZERO
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:40:48) 
-- CODE:
q= int(input('Quantidade inicial: '))
pc= int(input("Percentual de Cres. Mensal: "))

meses= 0

while (0 < q < 8000):
	qprv= int(input("Quantidade de peixes retirados: "))
	q= q + ( q * ( pc/100))
	q= q - qprv
	meses= meses + 1
	if ( q >= 0):
		print("ZERO")
	elif ( q >= 8000):
		print("MAXIMO")
		
print(meses)
-- OUTPUT:
ZERO
ZERO
ZERO
ZERO
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:40:51) 
-- CODE:
q= int(input('Quantidade inicial: '))
pc= int(input("Percentual de Cres. Mensal: "))

meses= 0

while (0 < q < 8000):
	qprv= int(input("Quantidade de peixes retirados: "))
	q= q + ( q * ( pc/100))
	q= q - qprv
	meses= meses + 1
	if ( q >= 0):
		print("ZERO")
	elif ( q >= 8000):
		print("MAXIMO")
		
print(meses)
-- EXECUTION TIME:
0.143684
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
ZERO
ZERO
ZERO
ZERO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:41:55) 
-- CODE:
q= int(input('Quantidade inicial: '))
pc= int(input("Percentual de Cres. Mensal: "))

meses= 0

while (0 < q < 8000):
	qprv= int(input("Quantidade de peixes retirados: "))
	q= q + ( q * ( pc/100))
	q= q - qprv
	meses= meses + 1
	if ( q >= 0):
		print("ZERO")
	elif ( q >= 8000):
		print("MAXIMO")
		
print(meses)
-- OUTPUT:
ZERO
ZERO
ZERO
ZERO
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:42:21) 
-- CODE:
q= int(input('Quantidade inicial: '))
pc= int(input("Percentual de Cres. Mensal: "))

meses= 0

while (0 < q < 8000):
	qprv= int(input("Quantidade de peixes retirados: "))
	q= q + ( q * ( pc/100))
	q= q - qprv
	meses= meses + 1
	if ( q >= 0):
		print("ZERO")
	elif ( q >= 8000):
		print("MAXIMO")
		
print(meses)
-- EXECUTION TIME:
0.209616
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
ZERO
ZERO
ZERO
ZERO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:42:43) 
-- CODE:
q= int(input('Quantidade inicial: '))
pc= int(input("Percentual de Cres. Mensal: "))

meses= 0

while (0 < q < 8000):
	qprv= int(input("Quantidade de peixes retirados: "))
	q= q + ( q * ( pc/100))
	q= q - qprv
	meses= meses + 1
		if ( q >= 0):
			print("ZERO")
		elif ( q >= 8000):
			print("MAXIMO")
		
print(meses)
-- ERROR:
File "XXXX", line 11
    if ( q >= 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:43:03) 
-- CODE:
q= int(input('Quantidade inicial: '))
pc= int(input("Percentual de Cres. Mensal: "))

meses= 0

while (0 < q < 8000):
	qprv= int(input("Quantidade de peixes retirados: "))
	q= q + ( q * ( pc/100))
	q= q - qprv
	meses= meses + 1
		if (q >= 0):
			print("ZERO")
		elif (q >= 8000):
			print("MAXIMO")
		
print(meses)
-- ERROR:
File "XXXX", line 11
    if (q >= 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:43:15) 
-- CODE:
q= int(input('Quantidade inicial: '))
pc= int(input("Percentual de Cres. Mensal: "))

meses= 0

while (0 < q < 8000):
	qprv= int(input("Quantidade de peixes retirados: "))
	q= q + ( q * ( pc/100))
	q= q - qprv
	meses= meses + 1
	if (q >= 0):
		print("ZERO")
	elif (q >= 8000):
		print("MAXIMO")
		
print(meses)
-- OUTPUT:
ZERO
ZERO
ZERO
ZERO
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:43:18) 
-- CODE:
q= int(input('Quantidade inicial: '))
pc= int(input("Percentual de Cres. Mensal: "))

meses= 0

while (0 < q < 8000):
	qprv= int(input("Quantidade de peixes retirados: "))
	q= q + ( q * ( pc/100))
	q= q - qprv
	meses= meses + 1
	if (q >= 0):
		print("ZERO")
	elif (q >= 8000):
		print("MAXIMO")
		
print(meses)
-- EXECUTION TIME:
0.30338
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
ZERO
ZERO
ZERO
ZERO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:45:03) 
-- CODE:
q= int(input("Quantidade inicial: "))
pc= int(input("Percentual de Cres. Mensal: "))

meses= 0

while (0 < q < 8000):
	qprv= int(input("Quantidade de peixes retirados: "))
	q= q + ( q * (pc/100))
	q= q - qprv
	meses= meses + 1
	if (q <= 0):
		print("ZERO")
		
	elif (q >= 8000):
		print("MAXIMO")
		
print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:45:07) 
-- CODE:
q= int(input("Quantidade inicial: "))
pc= int(input("Percentual de Cres. Mensal: "))

meses= 0

while (0 < q < 8000):
	qprv= int(input("Quantidade de peixes retirados: "))
	q= q + ( q * (pc/100))
	q= q - qprv
	meses= meses + 1
	if (q <= 0):
		print("ZERO")
		
	elif (q >= 8000):
		print("MAXIMO")
		
print(meses)
-- EXECUTION TIME:
0.22141
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
